04 / 05 /2023 : Improved Products Page and refined search functionality.

--- a/WebScrapper_Prototype/Views/Backend/AutoProductCreateTestImage.cshtml
+++ b/WebScrapper_Prototype/Views/Backend/AutoProductCreateTestImage.cshtml
@@ -1,4 +1,4 @@
-﻿@model wazaware.co.za.Models.AddCSV
+﻿@model WazaWare.co.za.Models.AddCSV
 
 @{
     ViewData["Title"] = "AutoProductCreateTestImage";
