--- a/WebScrapper_Prototype/Views/Backend/Index.cshtml
+++ b/WebScrapper_Prototype/Views/Backend/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<wazaware.co.za.Models.Product>
+﻿@model IEnumerable<WazaWare.co.za.Models.Product>
 @{
     ViewData["Title"] = "Products";
     Layout = "~/Views/Shared/_Layout.cshtml";
