--- a/WebScrapper_Prototype/Views/Shared/_Footer.cshtml
+++ b/WebScrapper_Prototype/Views/Shared/_Footer.cshtml
@@ -8,7 +8,7 @@
 					<!-- Single Widget -->
 					<div class="single-footer about">									
 						<div class="logo">
-							<a href="/"><img src="/Media/Logo/LogoOfficial.png" alt="WaZaWare Find The Right Price!" style="border-radius:10px;"></a>
+							<a href="/"><img src="/Media/Logo/LogoOfficial.png" alt="WazaWare Find The Right Price!" style="border-radius:10px;"></a>
 						</div>
 						<p class="text">We use Artificial Intelligence & Automated Scanners to find you the reliable products at the best available prices!</p>
 						<p class="call">Got a Question? Call us<span><a href="tel:+27815650206">+27 81 565 0206</a></span></p>
@@ -79,7 +79,8 @@
 				<div class="row">
 					<div class="col-lg-6 col-12">
 						<div class="left">
-							<p>Copyright © 2023 <a href="/" target="_blank">WaZAWare</a>  -  All Rights Reserved.</p>
+							<p>Copyright © 2023 <a href="/" target="_blank">WazaWare</a>  -  All Rights Reserved.</p>
+							<p><a href="https://lordicon.com/">Animated Icons by Lordicon.com</a></p>
 						</div>
 					</div>
 					<div class="col-lg-6 col-12">
