--- a/WebScrapper_Prototype/Views/Shared/_MiddleInner.cshtml
+++ b/WebScrapper_Prototype/Views/Shared/_MiddleInner.cshtml
@@ -1,11 +1,11 @@
-﻿@model wazaware.co.za.Models.ProductsViewModel
+﻿@model WazaWare.co.za.Models.ProductsViewModel
 
 <div class="middle-inner">
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-3 col-md-2 col-12">
 				<div class="logo">
-					<a href="/"><img src="/Media/Logo/LogoOfficialCropped.png" alt="WaZaWare Find The Right Price!" style="border-radius:10px;"></a>
+					<a href="/"><img src="/Media/Logo/LogoOfficialCropped.png" alt="WazaWare Find The Right Price!" style="border-radius:10px;"></a>
 				</div>
 			</div>
 			<div class="col-lg-7 col-md-7 col-12">
