--- a/WebScrapper_Prototype/Views/_ViewImports.cshtml
+++ b/WebScrapper_Prototype/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using wazaware.co.za
-@using wazaware.co.za.Models
+﻿@using WazaWare.co.za
+@using WazaWare.co.za.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
