--- a/WebScrapper_Prototype/Views/Shared/_Layout.cshtml
+++ b/WebScrapper_Prototype/Views/Shared/_Layout.cshtml
@@ -4,17 +4,17 @@
     <!-- Meta Tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="WaZaWare.co.za /Find the Right Price/ | Gaming | PC | Laptops | Monitors | PC Builder">
-    <meta property="og:title" content="WaZaWare">
-    <meta property="og:description" content="WaZaWare.co.za /Find the Right Price/ | Gaming | PC | Laptops | Monitors | PC Builder">
-    <meta property="og:image" content="http://swiftlinkprod-env.eba-s2qbd5re.eu-central-1.elasticbeanstalk.com/Media/LogoCropped.png">
-    <meta property="og:url" content="http://swiftlinkprod-env.eba-s2qbd5re.eu-central-1.elasticbeanstalk.com">
+    <meta name="description" content="wazaware.co.za | Gaming | PC | Laptops | Monitors | PC Builder">
+    <meta property="og:title" content="WazaWare">
+    <meta property="og:description" content="WazaWare.co.za | Gaming | PC | Laptops | Monitors | PC Builder">
+    <meta property="og:image" content="https://wazaware.co.za/Media/Logo/LogoRemoveBG.png">
+    <meta property="og:url" content="https://WazaWare.co.za">
     <meta property="og:type" content="website">
-    <meta name="twitter:card" content="http://swiftlinkprod-env.eba-s2qbd5re.eu-central-1.elasticbeanstalk.com/Media/Wazaware__1_-removebg-preview.png">
-    <meta name="twitter:title" content="WaZaWare">
-    <meta name="twitter:description" content="WaZaWare.co.za /Find the Right Price/ | Gaming | PC | Laptops | Monitors | PC Builder">
-    <meta name="twitter:image" content="http://swiftlinkprod-env.eba-s2qbd5re.eu-central-1.elasticbeanstalk.com/Media/LogoCropped.png">
-    <link rel="icon" type="image/png" href="http://swiftlinkprod-env.eba-s2qbd5re.eu-central-1.elasticbeanstalk.com/Media/LogoCropped.png">
+    <meta name="twitter:card" content="https://wazaware.co.za/Media/Logo/LogoRemoveBG.png">
+    <meta name="twitter:title" content="WazaWare">
+    <meta name="twitter:description" content="WazaWare.co.za | Gaming | PC | Laptops | Monitors | PC Builder">
+    <meta name="twitter:image" content="https://wazaware.co.za/Media/Logo/LogoRemoveBG.png">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
     <div>
