--- a/WebScrapper_Prototype/Views/Shop/WebsiteCritical.cshtml
+++ b/WebScrapper_Prototype/Views/Shop/WebsiteCritical.cshtml
@@ -4,19 +4,19 @@
     <!-- Meta Tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="WaZaWare.co.za /Find the Right Price/ | Gaming | PC | Laptops | Monitors | PC Builder">
-    <meta property="og:title" content="WaZaWare">
-    <meta property="og:description" content="WaZaWare.co.za /Find the Right Price/ | Gaming | PC | Laptops | Monitors | PC Builder">
-    <meta property="og:image" content="http://swiftlinkprod-env.eba-s2qbd5re.eu-central-1.elasticbeanstalk.com/Media/Logo/LogoOfficialIcon.png">
+    <meta name="description" content="WazaWare.co.za | Gaming | PC | Laptops | Monitors | PC Builder">
+    <meta property="og:title" content="WazaWare">
+    <meta property="og:description" content="WazaWare.co.za | Gaming | PC | Laptops | Monitors | PC Builder">
+    <meta property="og:image" content="https://wazaware.co.za/Media/Logo/LogoOfficialIcon.png">
     <meta property="og:url" content="http://swiftlinkprod-env.eba-s2qbd5re.eu-central-1.elasticbeanstalk.com">
     <meta property="og:type" content="website">
-    <meta name="twitter:card" content="http://swiftlinkprod-env.eba-s2qbd5re.eu-central-1.elasticbeanstalk.com/Media/Logo/LogoOfficialIcon.png">
-    <meta name="twitter:title" content="WaZaWare">
-    <meta name="twitter:description" content="WaZaWare.co.za /Find the Right Price/ | Gaming | PC | Laptops | Monitors | PC Builder">
-    <meta name="twitter:image" content="http://swiftlinkprod-env.eba-s2qbd5re.eu-central-1.elasticbeanstalk.com/Media/Logo/LogoOfficialIcon.png">
+    <meta name="twitter:card" content="https://wazaware.co.za/Media/Logo/LogoOfficialIcon.png">
+    <meta name="twitter:title" content="WazaWare">
+    <meta name="twitter:description" content="WazaWare.co.za | Gaming | PC | Laptops | Monitors | PC Builder">
+    <meta name="twitter:image" content="https://wazaware.co.za/Media/Logo/LogoOfficialIcon.png">
     <!-- Logo -->
-    <link rel="shortcut icon" href="http://swiftlinkprod-env.eba-s2qbd5re.eu-central-1.elasticbeanstalk.com/Media/Logo/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="http://swiftlinkprod-env.eba-s2qbd5re.eu-central-1.elasticbeanstalk.com/Media/Logo/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="http://swiftlinkprod-env.eba-s2qbd5re.eu-central-1.elasticbeanstalk.comhttps://wazaware.co.za/Media/Logo/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="http://swiftlinkprod-env.eba-s2qbd5re.eu-central-1.elasticbeanstalk.comhttps://wazaware.co.za/Media/Logo/favicon.ico" type="image/x-icon">
     <title>Website is no available - Come back later...</title>
     <style>
         .loader {
@@ -46,7 +46,7 @@
                 <div class="logo">
                     <img src="~/Media/Logo/LogoOfficial.png" height="250" style="border-radius:20px;"/>
                 </div>
-                <h1 style="text-align:center;">WaZaWare is currently unavailable - Please come back abit later!</h1>
+                <h1 style="text-align:center;">WazaWare is currently unavailable - Please come back abit later!</h1>
                 <p></p>
                 <div class="col-12">
                     <div class="loader"></div>
