--- a/WebScrapper_Prototype/Views/User/Index.cshtml
+++ b/WebScrapper_Prototype/Views/User/Index.cshtml
@@ -1,5 +1,5 @@
-﻿@using wazaware.co.za.Controllers;
-@model wazaware.co.za.Models.UserViewModel
+﻿@using WazaWare.co.za.Controllers;
+@model WazaWare.co.za.Models.UserViewModel
 @{
 	ViewData["Title"] = "Account Details";
 }
@@ -9,19 +9,19 @@
 	<!-- Meta Tags -->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="WaZaWare.co.za /Find the Right Price/ | Gaming | PC | Laptops | Monitors | PC Builder">
-	<meta property="og:title" content="WaZaWare">
-	<meta property="og:description" content="WaZaWare.co.za /Find the Right Price/ | Gaming | PC | Laptops | Monitors | PC Builder">
-	<meta property="og:image" content="http://swiftlinkprod-env.eba-s2qbd5re.eu-central-1.elasticbeanstalk.com/Media/Logo/LogoOfficialIcon.png">
+	<meta name="description" content="WazaWare.co.za | Gaming | PC | Laptops | Monitors | PC Builder">
+	<meta property="og:title" content="WazaWare">
+	<meta property="og:description" content="WazaWare.co.za | Gaming | PC | Laptops | Monitors | PC Builder">
+	<meta property="og:image" content="https://wazaware.co.za/Media/Logo/LogoOfficialIcon.png">
 	<meta property="og:url" content="http://swiftlinkprod-env.eba-s2qbd5re.eu-central-1.elasticbeanstalk.com">
 	<meta property="og:type" content="website">
-	<meta name="twitter:card" content="http://swiftlinkprod-env.eba-s2qbd5re.eu-central-1.elasticbeanstalk.com/Media/Logo/LogoOfficialIcon.png">
-	<meta name="twitter:title" content="WaZaWare">
-	<meta name="twitter:description" content="WaZaWare.co.za /Find the Right Price/ | Gaming | PC | Laptops | Monitors | PC Builder">
-	<meta name="twitter:image" content="http://swiftlinkprod-env.eba-s2qbd5re.eu-central-1.elasticbeanstalk.com/Media/Logo/LogoOfficialIcon.png">
+	<meta name="twitter:card" content="https://wazaware.co.za/Media/Logo/LogoOfficialIcon.png">
+	<meta name="twitter:title" content="WazaWare">
+	<meta name="twitter:description" content="WazaWare.co.za | Gaming | PC | Laptops | Monitors | PC Builder">
+	<meta name="twitter:image" content="https://wazaware.co.za/Media/Logo/LogoOfficialIcon.png">
 	<!-- Logo -->
-	<link rel="shortcut icon" href="http://swiftlinkprod-env.eba-s2qbd5re.eu-central-1.elasticbeanstalk.com/Media/Logo/favicon.ico" type="image/x-icon">
-	<link rel="icon" href="http://swiftlinkprod-env.eba-s2qbd5re.eu-central-1.elasticbeanstalk.com/Media/Logo/favicon.ico" type="image/x-icon">
+	<link rel="shortcut icon" href="http://swiftlinkprod-env.eba-s2qbd5re.eu-central-1.elasticbeanstalk.comhttps://wazaware.co.za/Media/Logo/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="http://swiftlinkprod-env.eba-s2qbd5re.eu-central-1.elasticbeanstalk.comhttps://wazaware.co.za/Media/Logo/favicon.ico" type="image/x-icon">
 	<!-- Title Tag  -->
 	<title>Account Details</title>
 	<!-- Web Font -->
@@ -185,7 +185,7 @@
 					<div class="row">
 						<div class="col-lg-3 col-md-2 col-12">
 							<div class="logo">
-								<a href="/"><img src="/Media/Logo/LogoOfficialCropped.png" alt="WaZaWare Find The Right Price!" style="border-radius:10px;"></a>
+								<a href="/"><img src="/Media/Logo/LogoOfficialCropped.png" alt="WazaWare Find The Right Price!" style="border-radius:10px;"></a>
 							</div>
 						</div>
 						<div class="col-lg-7 col-md-7 col-12">
@@ -483,7 +483,7 @@
 								<div class="col-lg-6 col-md-6 col-12">
 									<div class="form-group">
 										<label asp-for="Email" class="form-label">Email:</label>
-										<input asp-for="Email" type="email" name="email" autocomplete="on" placeholder="lowprices@wazaware.co.za" class="form-control" aria-label="Email">
+										<input asp-for="Email" type="email" name="email" autocomplete="on" placeholder="lowprices@WazaWare.co.za" class="form-control" aria-label="Email">
 									</div>
 								</div>
 							</div>
@@ -562,7 +562,7 @@
 								<div class="col-lg-6 col-md-6 col-12">
 									<div class="form-group">
 										<label asp-for="Email" class="form-label">Email Address</label>
-										<input asp-for="Email" type="email" name="email" autocomplete="on" placeholder="lowprices@wazaware.co.za" class="form-control" aria-label="Email">
+										<input asp-for="Email" type="email" name="email" autocomplete="on" placeholder="lowprices@WazaWare.co.za" class="form-control" aria-label="Email">
 									</div>
 								</div>
 								<div class="col-lg-6 col-md-6 col-12">
