05 / 05 / 2023: Finalized Products Page, Product Sorting and Product Filters >> Mobile Friendly As well

--- a/WebScrapper_Prototype/Views/Shared/_HeaderInner.cshtml
+++ b/WebScrapper_Prototype/Views/Shared/_HeaderInner.cshtml
@@ -15,7 +15,7 @@
 											<a href="/Shop">Shop</a>
 										</li>
 										<li>
-											<a href="@Url.Action("Products", "Shop", new { category = "hardware_parent" })">
+											<a href="@Url.Action("Products", "Shop", new { category = "essential_hardware" })">
 												Essential Hardware<i class="ti-arrow-top-right"></i>
 												@*<span class="new">New</span>*@
 											</a>
@@ -31,27 +31,27 @@
 											</ul>*@
 										</li>
 										<li>
-											<a href="@Url.Action("Products", "Shop", new { category = "gpus_parent" })">
+											<a href="@Url.Action("Products", "Shop", new { category = "latest_gpus" })">
 												Latest GPUS<i class="ti-arrow-top-right"></i>
 											</a>
 										</li>
 										<li>
-											<a href="@Url.Action("Products", "Shop", new { category = "deals_parent" })">
+											<a href="@Url.Action("Products", "Shop", new { category = "great_deals" })">
 												Great Deals<i class="ti-arrow-top-right"></i>
 												</a>
 										</li>
 										<li>
-											<a href="@Url.Action("Products", "Shop", new { category = "pc_parent" })">
+											<a href="@Url.Action("Products", "Shop", new { category = "pc_chassis" })">
 												PC Chassis<i class="ti-arrow-top-right"></i>
 												</a>
 										</li>
 										<li>
-											<a href="@Url.Action("Products", "Shop", new { category = "storage_parent" })">
+											<a href="@Url.Action("Products", "Shop", new { category = "data_storage" })">
 												Data Storage<i class="ti-arrow-top-right"></i>
 												</a>
 										</li>
 										<li>
-											<a href="@Url.Action("Products", "Shop", new { category = "laptops_parent" })">
+											<a href="@Url.Action("Products", "Shop", new { category = "performace_laptops" })">
 												Performance Laptops<i class="ti-arrow-top-right"></i>
 												</a>
 										</li>
